# MemMachine

./: .gitignore  README.md  _configuration.yml  build-docker.sh  docker-compose.yml  pyproject.toml
examples/cursor_extension/: .gitignore  CHANGELOG.md  README.md  openapi.json  package.json  pnpm-lock.yaml
examples/cursor_extension/src/: apiClient.ts  config.ts  episodicMemoryTreeProvider.ts  extension.ts  mcpServerManager.ts  profileMemoryTreeProvider.ts
examples/cursor_mcp/: README.md  activate_venv.sh  cursor_mcp_server.py  pyproject.toml  rules.md  start_server.sh  test_mcp_server.py
sample_configs/: episodic_memory_config.sample
src/memmachine/common/embedder/: embedder_builder.py  qianwen_embedder.py
src/memmachine/common/language_model/: language_model_builder.py  qianwen_language_model.py
src/memmachine/episodic_memory/long_term_memory/: long_term_memory.py
src/memmachine/server/: app.py
src/memmachine/server/prompt/: software_dev_prompt.py
